# xecs

./: .gitignore  Cargo.toml
.zed/: settings.json
benches/: my_benchmark.rs
src/: atomic_refcell.rs  component.rs  component_flags.rs  component_index.rs  data_structures.rs  dynamic_struct.rs  entity.rs  entity_flags.rs  entity_index.rs  entity_view.rs  error.rs  event_flags.rs  flags.rs  get_params.rs  graph.rs  id.rs  lib.rs  macros.rs  memory.rs  pointer.rs  query.rs  registration.rs  sparse_set.rs  table_index.rs  type_id.rs  type_impl.rs  type_info.rs  type_traits.rs  unsafe_world_ptr.rs  utils.rs  world.rs  world_utils.rs
src/id/: entity_view.rs  id_index.rs  manager.rs  mod.rs
src/relationships/: mod.rs
src/storage/: archetype.rs  archetype_data.rs  archetype_flags.rs  archetype_index.rs  column.rs  component_sparse.rs  component_sparse_set.rs  erased_vec.rs  mod.rs  sparse.rs  sparse_set.rs  sparse_storage.rs  table.rs  table_data.rs  table_index.rs  tag_sparse_set.rs
src/tests/: world.rs
src/types/: mod.rs  type_info.rs
xecs_macros/: Cargo.toml
xecs_macros/src/: lib.rs
