[package]
name = "xecs"
version = "0.1.0"
edition = "2024"
description = "eXtended ecs"

[dependencies]
xecs_macros = { path = "xecs_macros" }
const-assert = { git = "https://github.com/aquarius2019/const-assert.git" }
thiserror = "2.0.16"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "my_benchmark"
harness = false
